<resources>
    <string name="app_name">My Portfolio App</string>

    <string name="apps_title">My Nanodegree apps</string>
    <string name="action_settings">Settings</string>
    <string name="btn1_name">Spotify Streamer</string>
    <string name="btn2_name">Football Scores App</string>
    <string name="btn3_name">Library App</string>
    <string name="btn4_name">Build It Bigger</string>
    <string name="btn5_name">XYZ Reader</string>
    <string name="btn6_name">Capstone: My Own App</string>
</resources>
