<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView android:text="@string/apps_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/app1"
        style="@style/MainButton"
        android:text="@string/btn1_name"
        android:onClick="onBtn1Click"
        />

    <Button
        android:id="@+id/app2"
        style="@style/MainButton"
        android:text="@string/btn2_name"
        android:onClick="onBtn2Click"
        />

    <Button
        android:id="@+id/app3"
        style="@style/MainButton"
        android:text="@string/btn3_name"
        android:onClick="onBtn3Click"
        />

    <Button
        android:id="@+id/app4"
        style="@style/MainButton"
        android:text="@string/btn4_name"
        android:onClick="onBtn4Click"
        />

    <Button
        android:id="@+id/app5"
        style="@style/MainButton"
        android:text="@string/btn5_name"
        android:onClick="onBtn5Click"
        />

    <Button
        android:id="@+id/app6"
        style="@style/MainButton.SP"
        android:text="@string/btn6_name"
        android:onClick="onBtn6Click"
        />

</LinearLayout>
